# ProgramacionLogicalFuncional_devMariana

./: Casos_prueba_arbolito_mariana.txt  Ej1.hs  Ej2.hs  Ej3.hs  Ej4.hs  Ej5.hs  Ej6.hs  Ejercicio1  Ejercicio1.pl  Ejercicio2.hs  Ejercicio2.pl  Ejercicio3.hs  Ejercicio3.pl  Ejercicio4.hs  Ejercicio4.pl  Ejercicio5.hs  EjercicioDeManejoDeArboles.pl  PruebasPlantas.txt  README.md  RepresentacionObraLiterariaProlog.pl
KataFizzBuzz/: FizzBuzz.hs  KataFizzBuzz.cabal  stack.yaml
KataFizzBuzz/KataFizzBuzz/: CHANGELOG.md  KataFizzBuzz.cabal  package.yaml
KataFizzBuzz/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
KataFizzBuzz/src-exe/: main.hs
