cabal-version:      3.0
name:               KataFizzBuzz
version:            0.1.0.0
synopsis:           Pruebas Automatizadas para katas
-- description:
homepage:
    https://github.com/MarianaRodriguezG/ProgramacionLogicalFuncional_devMariana/tree/AutTestingFizzBuzzAndBowlingKatas

license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             Mariana Lucero Rodriguez Gallardo
maintainer:         s21120236@alumnos.itsur.edu.mx
-- copyright:
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable KataFizzBuzz
    import:           warnings
    main-is:         Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.7 && < 5
                     , tasty
                     , tasty-hunit
    hs-source-dirs:   src-exe
    default-language: Haskell2010
